# dagster-socrata

./: .flake8  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
dagster_socrata/: airtable_resource.py  assets.py  definitions.py  resource.py  socrata_resource.py  unity_catalog_resource.py
dagster_socrata/assets/: __init__.py  catalog.py  deltatable.py  metadata.py  objectstore.py
dagster_socrata_tests/: conftest.py  metadata.json  test_airtable_resource.py  test_assets.py  test_create_entry_in_data_catalog.py  test_socrata_metadata.py  test_socrata_to_deltalake.py  test_socrata_to_object_store.py
dagster_socrata_tests/integration_tests/: conftest.py  test_metadata.py
