[project]
name = "dagster_socrata"
version = "0.1.0"
description = "Dagster pipeline for Socrata datasets"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "sodapy",
    "boto3==1.34.131",
    "dagster-aws",
    "dagster-postgres",
    "dagster-duckdb",
    "deltalake",
    "pandas",
    "pyarrow",
    "s3fs",
    "fastparquet"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_socrata.definitions"
code_location_name = "dagster_socrata"

[tool.setuptools.packages.find]
exclude=["dagster_socrata_tests"]
