[project]
name = "dagster_socrata"
version = "0.1.0"
description = "Dagster pipeline for Socrata datasets"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-ncsa>=0.1.3",
    "dagster-cloud",
    "sodapy",
    "boto3==1.34.131",
    "dagster-aws",
    "dagster-postgres",
    "deltalake",
    "pandas",
    "pyarrow",
    "s3fs",
    "fastparquet",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
    "flake8"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_socrata.definitions"
code_location_name = "dagster_socrata"

[tool.setuptools.packages.find]
exclude=["dagster_socrata_tests"]

[tool.pytest.ini_options]
testpaths = ["dagster_socrata_tests"]
norecursedirs = ["dagster_socrata_tests/integration_tests"]

[tool.uv.sources]
dagster-ncsa = { path = "../dagster-ncsa" }
